--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ next-env.d.ts
 # database backups
 /backups/
 
+# docs
+docs/
+
 # scripts
 ./scripts/verify-agent.ts
 ./scripts/boost-agent-karma.ts
