--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@types/d3": "^7.4.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "d3": "^7.9.0",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
